tests/ucc/type/good/incomplete-type-ptr-1.c
typedef struct __list
{
    void *elem;
    struct __list *next;
} my_list;

int main(void)
{
    return 0;
}
