tests/ucc/type/bad/non-scalar-while.c
struct a
{
    int a;
};

int main(void)
{
    struct a a;

    while (a)
        ;

    return 0;
}
